--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="title_activity_otpscreen">OTPScreen</string>
     <string name="title_activity_dashboard_screen">DashboardScreen</string>
     <string name="title_activity_splash_screen">SplashScreen</string>
+    <string name="title_activity_iframe_view">IFrameView</string>
 </resources>
